change form for the compatition and change php file

--- a/exercises/ex4/edit.html
+++ b/exercises/ex4/edit.html
@@ -197,15 +197,15 @@
               />
             </div>
             <div class="w-100">
-              <label for="why" class="form-label"
-                >Why should you get to order this phone ?</label
+              <label for="color" class="form-label"
+                >Choose phone color</label
               >
-              <textarea
-                class="form-control"
-                name="why"
-                id="why"
-                required
-              ></textarea>
+              <select class="form-select" name="color" id="color">
+                <option value="blue">Blue</option>
+                <option value="red">Red</option>
+                <option value="black" selected>black</option>
+                <option value="white">white</option>
+              </select>
             </div>
             <button type="submit" class="btn btn-primary w-100">Submit</button>
           </form>
