--- a/exercises/ex4/edit.html
+++ b/exercises/ex4/edit.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
-      src="https://code.jquery.com/jquery-3.6.4.min.js"
-      integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8="
-      crossorigin="anonymous"
-    ></script>
+    src="https://code.jquery.com/jquery-3.6.4.min.js"
+    integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8="
+    crossorigin="anonymous"
+  ></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -25,6 +25,7 @@
     <link href="https://fonts.cdnfonts.com/css/pixelade" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/sketch.js"></script>
+    <script src="js/script.js"></script>
     <title>Document</title>
   </head>
   <body>
@@ -152,7 +153,7 @@
             action="https://se.shenkar.ac.il/students/2022-2023/web1/dev_23/exercises/ex4/index.php"
             method="get"
             autocomplete="on"
-            id="clubForm"
+            id="gameForm"
             class="w-100"
           >
             <input
@@ -207,7 +208,10 @@
                 <option value="white">white</option>
               </select>
             </div>
-            <button type="submit" class="btn btn-primary w-100">Submit</button>
+              <input type="submit" class="btn btn-primary w-100" value="Submit">
+              <div class="invalid-feedback" id="gameValidation">
+                You didn't play the game.
+              </div>
           </form>
         </div>
       </main>
