fixed bug with responsive height in index html

--- a/exercises/ex4/index.html
+++ b/exercises/ex4/index.html
@@ -15,7 +15,7 @@
     <script src="js/script.js"></script>
     <title>Document</title>
   </head>
-  <body>
+  <body id="mainBody">
     <h1>Join Our Members Club</h1>
     <form
       action="http://se.shenkar.ac.il/teach/web1/get_form3.php"
