--- a/exercises/ex4/edit.html
+++ b/exercises/ex4/edit.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Form exercise for shenkar compation reservation for nokia phone with snake game and a hidden CTF">
     <script
     src="https://code.jquery.com/jquery-3.6.4.min.js"
     integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8="
@@ -22,7 +23,6 @@
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/addons/p5.sound.min.js"></script>
-    <link href="https://fonts.cdnfonts.com/css/pixelade" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/sketch.js"></script>
     <script src="js/script.js"></script>
@@ -40,7 +40,7 @@
       <main class="d-flex flex-row">
         <div id="game_area"></div>
         <aside id="form_area" class="align-items-center d-flex flex-column">
-          <img src="assets/nokia.svg"></img>
+          <img src="assets/nokia.svg" alt="nokia" title="nokia" width="20%"></img>
 
           <form
             action="https://se.shenkar.ac.il/students/2022-2023/web1/dev_23/exercises/ex4/index.php"
