--- a/exercises/ex4/index.html
+++ b/exercises/ex4/index.html
@@ -60,7 +60,7 @@
         </div>
       </div>
       <div class="col-md-4 form-floating">
-        <input class="form-control" type="number" name="coffee" id="coffee" value="0"></label>
+        <input class="form-control" type="number" name="coffee" id="coffee" value="0">
         <label for="coffee" class="form-label"> How many time i drink coffe a day? </label>
       </div>
       <div class="col-md-4">
@@ -77,8 +77,8 @@
         <label for="address" class="form-label">address</label>
       </div>
       <div class="col-md-4">
-        <label for="interests" class="form-label">interests</label>
-        <dataset id="interests">
+        <label class="form-label">interests</label>
+        <div id="interests">
           <div class="form-check">
             <input class="form-check-input" type="checkbox" name="interests[]" id="interest1" value="Reading books">            
             <label class="form-check-label" for="interest1">
@@ -109,14 +109,14 @@
               Playing computer games
             </label>
           </div>
-        </dataset>
+        </div>
         <div class="invalid-feedback">
           check atleast 3 interests
         </div>
       </div>
       <div class="col-md-4">
-        <label for="gender" class="form-label">Gender</label>
-        <dataset name="gender" id="gender">
+        <label class="form-label">Gender</label>
+        <div id="gender">
           <div class="form-check">
             <input class="form-check-input" type="radio" name="gender" id="male" value="yes" checked>
             <label class="form-check-label" for="male">
@@ -129,7 +129,7 @@
               Female
             </label>
           </div>
-        </dataset>
+        </div>
       </div>
       <div class="col-md-4">
         <label for="age" class="form-label">Your Age</label>
