--- a/exercises/ex4/edit.html
+++ b/exercises/ex4/edit.html
@@ -22,7 +22,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/addons/p5.sound.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/addons/p5.sound.min.js"></script> -->
     <link rel="stylesheet" href="css/style.css">
     <script src="js/sketch.js"></script>
     <script src="js/script.js"></script>
